# mipanel

./: .gitignore  COPYING  clean.sh  composer.json  configure.ac  mipanel.spec  schema.sql
backend/: HttpdConf.php  SrvCtl.php  SrvCtlRmiServer.php  TestSrvCtl.php  install.php
cli/: srvctl.php
config/: config.php.default
controller/: AboutRequest.php  AuthRequest.php  DnsRecordEditRequest.php  DnsZoneEditRequest.php  DnsZoneRecordsRequest.php  DomainSearchRequest.php  DomainViewRequest.php  HomeRequest.php  MailAliasEditRequest.php  MailAliasesRequest.php  MailMboxEditRequest.php  MailMboxesRequest.php  PhpInfoRequest.php
dns/: changes.sql
ftp/: changes.sql  pam-pgsql-proftpd.conf
lib/: Log.php
model/: propel.xml.dist  schema.sql  schema.xml
redirect/: Makefile  abort.h  changes.sql  config.c  config.h  constants.h  hash.c  hash.h  logging.h  redirect-config.h  redirect.c  redirect.conf.default  schema.sql  tools.c  tools.h  version.h
scripts/: gensqlschema.sh  init.redhat  install.php  rmiserver.default  rpmbuild.sh  webctl.php
sql/: changelog.sql  schema.sql
squid-out/: squid.conf
src/: Makefile.am
template/: application.about.html  application.authresponse.html  application.dnsrecordedit.html  application.dnszoneedit.html  application.dnszonerecords.html  application.domainsearch.html  application.domainview.html  application.homeview.html  application.mailaliasedit.html  application.mailaliases.html  application.mailmboxedit.html  application.mailmboxes.html  application.searchwrapper.html  mindbit.mipanel.authresponse.html
web/: .htaccess  (+31 more)
(+64 files in other folders)
